Added some fixes